paopao-ce/paopao-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paopao-web
  namespace: paopao-app
  labels:
    app.kubernetes.io/name: paopao-web
    app.kubernetes.io/instance: paopao-web
    app.kubernetes.io/version: "1.2.0"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: paopao-web
    app.kubernetes.io/instance: paopao-web
